# FrameWorks

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
backend/app/: __init__.py  analyze.py  config.py  db.py  main.py  rulesets.py  scryfall.py
backend/app/parsers/: __init__.py  http.py  registry.py  text.py
backend/app/parsers/importers/: __init__.py  archidekt.py  cubecobra.py  melee.py  moxfield.py  mtgtop8.py
backend/tests/: conftest.py  test_analyze.py  test_rulesets.py  test_text_parser.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  scryfallQuery.test.ts  scryfallQuery.ts  store.ts  styles.css
frontend/src/views/: ArtGrid.tsx  Compare.tsx  Consistency.tsx  Drawer.tsx  Funnel.tsx  Gallery.tsx  Mosaic.tsx  MtgCard.tsx  Outliers.tsx  PageDescription.tsx  PerCard.tsx  SettingsModal.tsx  Timeline.tsx  insightsUtil.ts
rulesets/: builtin.yaml
scripts/: _check_legalities.py  _check_oracle.py  smoke_importers.py  smoke_melee.py
unraid/: deckaesthetics.xml
